# MCISLAB_DeepRead

./: .gitignore  404.html  AGENTS.md  README.html  README.md  index.css  index.html  index.xml  postscript.js  pyproject.toml  sitemap.xml
DomainMaps/: AgenticRL.html  EmbodiedAI.html  EmbodiedAI.md  GUI-Agent.html  GUI-Agent.md  HyperbolicManifold.html  VLM.html  VLM.md  WorldModel.html  WorldModel.md  _index.md  index.html
Experiments/: 2026-04-29-ScaleInvariantGroundingGUI.html  2026-04-29-ScaleInvariantGroundingGUI.md  index.html
Ideas/: AdversarialVerification-SelfImproving-GUI.html  ForkPoint-CreditAssignment-GUI.html  ForkPoint-CreditAssignment-GUI.md  ScaleInvariant-Grounding-GUI.html  ScaleInvariant-Grounding-GUI.md  _index.md  index.html
Papers/: 0001-ScientificComputingGuiAgent.html  0001-ScientificComputingGuiAgent.md  0200-FromAlifeAgentsKingdom.html  0201-GuiEditorThatGenerates.html  0201-GuiEditorThatGenerates.md  0211-BuildingTrustworthySoftwareAgents.html  0701-AbelGuiAgentBased.html  0701-AbelGuiAgentBased.md  1200-StudyPaperTestCase.html  1200-StudyPaperTestCase.md  1202-IntelligentMultiagentControlSystem.html  1202-IntelligentMultiagentControlSystem.md  1207-3dSlicerAsImage.html  1207-3dSlicerAsImage.md  1300-MethodologyEngineerValidateDynamic.html  1300-MethodologyEngineerValidateDynamic.md  1400-InventionsGuiAesthetics.html  1602-SdmReproducibleExtensiblePlatform.html  1700-PoincareEmbeddings.html  1700-PoincareEmbeddings.md  1709-GuiCommunicationAgentNephele.html  1709-GuiCommunicationAgentNephele.md  1800-HowGameComplexityAffects.html  (+756 more)
(+463 files in other folders)
