[project]
name = "readpapermachine"
version = "0.1.0"
description = "AI-assisted research knowledge management system"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-roamlinks>=0.2.0",
]